--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -2,7 +2,9 @@
     <app-header [menuTabs]="menuTabs" [subMenuTabs]="currentSubMenus"></app-header>
 
     <div class="wrapper">
-        <app-side @slideInOut *ngIf="appSide.indexOf(currentPage.path) > -1" [currentPage]="currentPage.path"></app-side>
-        <router-outlet></router-outlet>
+        <app-side @slideInOut *ngIf="appSide.indexOf(currentPage.path) > -1" [currentPage]="currentPage"></app-side>
+        <div class="page-content">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
