Testing Discord Log

--- a/src/app/HTMLs/me.html
+++ b/src/app/HTMLs/me.html
@@ -18,11 +18,11 @@
 <div class="column right">
   <div class="box">
     <div class="title">Plugin 1</div>
-    <div class="content">Hola Este es contenido</div>
+    <div class="content">Hola Este es ciontenido</div>
   </div>
   
   <div class="box">
-    <div class="title">Plugin 2</div>
+    <div class="title">Plugin 223</div>
     <div class="content">Hola Este es contenido</div>
   </div>
   
