--- a/src/app/HTMLs/me.html
+++ b/src/app/HTMLs/me.html
@@ -18,7 +18,7 @@
 <div class="column right">
   <div class="box">
     <div class="title">Plugin 1</div>
-    <div class="content">Hola Este es ciontenido</div>
+    <div class="content">Hola Este es contenido</div>
   </div>
   
   <div class="box">
