Me and Settings almost done

--- a/src/app/HTMLs/settings.html
+++ b/src/app/HTMLs/settings.html
@@ -1,3 +1,60 @@
-<p>
-  settings works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="box fg-light">
+        <div class="title">Ajustes de Privacidad</div>
+        <div class="content">
+          <div class="row">
+            <div class="col">
+              <form action="">
+                  <h6><b>VISIBILIDAD DE PERFIL</b></h6>
+                  <div class="row mb-2">
+                      <div class="cell-sm-4 fg-light">Permitir a otros usuarios ver tu perfil</div>
+                      <div class="cell-sm-2">
+                          <input type="checkbox" data-role="switch" data-cls-switch="arcticSwitch" data-cls-check="bd-green">
+                      </div>
+                  </div>
+                  <h6><b>ESTADO ONLINE</b></h6>
+                  <div class="row mb-2">
+                      <div class="cell-sm-4 fg-light">Permitir a otros usuarios ver tu estado de conexión</div>
+                      <div class="cell-sm-2">
+                          <input type="checkbox" data-role="switch" data-cls-switch="arcticSwitch" data-cls-check="bd-green">
+                      </div>
+                  </div>
+                  <h6><b>AJUSTES DE SEGUIMIENTO</b></h6>
+                  <div class="row mb-2">
+                      <div class="cell-sm-6 fg-light">Permitir que tus amigos puedan seguirte de una sala a otra</div>
+                      <div class="cell-sm-2">
+                          <input type="checkbox" data-role="switch" data-cls-switch="arcticSwitch" data-cls-check="bd-green">
+                      </div>
+                  </div>
+                  <h6><b>PETICIONES DE AMISTAD</b></h6>
+                  <div class="row mb-2">
+                      <div class="cell-sm-6 fg-light">Permitir a otros usuarios enviarme peticiones de amistad</div>
+                      <div class="cell-sm-2">
+                          <input type="checkbox" data-role="switch" data-cls-switch="arcticSwitch" data-cls-check="bd-green">
+                      </div>
+                  </div>
+                  <h6><b>MENSAJES OFFLINE</b></h6>
+                  <div class="row mb-2">
+                      <div class="cell-sm-6 fg-light">Permitir a mis amigos enviarme mensajes privados mientras estoy offline</div>
+                      <div class="cell-sm-2">
+                          <input type="checkbox" data-role="switch" data-cls-switch="arcticSwitch" data-cls-check="bd-green">
+                      </div>
+                  </div>
+              </form>
+            </div>
+            <div class="col">
+              <div class="box darkTransparent fg-light">
+                <div class="title">¿NECESITAS AYUDA?</div>
+                <div class="content">
+                    Consulta cómo puedes echarte un cable o pedir ayuda en nuestro apartado de <b>Atención al Usuario</b>. También incluye una lista de números de teléfono y páginas web en caso de que necesites hablar con alguien. Si no encuentras una respuesta adecuada en esta página, ponte en contacto con el <b>Ayudante de Habbo</b>.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
