--- a/src/app/HTMLs/header.html
+++ b/src/app/HTMLs/header.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="mainNavigator orange">
+    <div class="mainNavigator darkBlue">
         <div class="logo"></div>
         <ul class="menu">
             <li *ngFor="let tab of menuTabs">
