--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,9 +1,16 @@
 <div class="content">
     <app-header [menuTabs]="menuTabs" [subMenuTabs]="currentSubMenus"></app-header>
 
-    <div class="wrapper">
+    <div class="wrapper nite">
         <app-side @slideInOut *ngIf="appSide.indexOf(currentPage.path) > -1" [currentPage]="currentPage"></app-side>
         <div class="page-content">
+            <div class="row">
+                <div class="col">
+                    <!--<div class="box fg-light bg-red drop-shadow">
+                        <div class="content"><b>¡Atención Mr.Mustache! Al parecer el hotel se encuentra en mantenimiento...</b></div>
+                    </div>-->
+                </div>
+            </div>
             <router-outlet></router-outlet>
         </div>
     </div>
