--- a/src/app/components/user/side/side.component.css
+++ b/src/app/components/user/side/side.component.css
@@ -3,8 +3,8 @@ div.section {
     margin: 15px auto;
   }
   div.section div.title {
-    border-bottom: 1px solid #020202;
-    box-shadow: 0px 1px 0px #191919;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 1px 0px 0px rgba(66, 66, 66, 0.3);
     font-family: Ubuntu Light;
     font-weight: bold;
     font-size: 18pt;
@@ -31,8 +31,8 @@ div.section {
     margin: 10px 0;
   }
   div.section div.content div.sub-section div.title {
-    border-bottom: 1px solid #020202;
-    box-shadow: 0px 1px 0px #191919;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 1px 0px 0px rgba(66, 66, 66, 0.3);
     font-family: Ubuntu Light;
     font-weight: bold;
     font-size: 11pt;
@@ -100,8 +100,8 @@ div.section {
     left: -12px;
   }
   div.section div.content div.user-data div.information {
-    border-bottom: 1px solid #020202;
-    box-shadow: 0px 1px 0px #191919;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 1px 0px 0px rgba(66, 66, 66, 0.3);
     display: inline-block;
     max-width: 180px;
   }
