Customization Page and Selects Design

--- a/src/app/HTMLs/me.html
+++ b/src/app/HTMLs/me.html
@@ -1,48 +1,40 @@
 <div class="container">
-    <div class="row">
-      <div class="col flex-justify-center">
-        <div class="box fg-white">
-          <div class="title">Últimas Noticias</div>
-          <div class="content fg-dark">
-            <div data-role="carousel" data-controls="false" data-effect="fade" data-bullets-style="circle" data-bullets-size="small" data-auto-start="true" data-bullets-position="right" >
-              <div class="slide" data-cover="https://images.habbo.com/web_images/habbo-web-articles/lpromo_referral.png">
-                <div class="promo">
-                    <div class="title">aXDR is getting a bit angular!</div>
-                    <div class="summary">aXDR project, started by Boris Akopov (Xdr) and took by Hornet Team is remaking the system on a different language but same features are held...</div>
-                    <div class="actions">
-                      <button class="button success rounded drop-shadow">Play!</button>
+  <div class="row">
+    <div class="col flex-justify-center">
+      <div class="row">
+        <div class="col">
+            <div class="box">
+              <div class="title fg-white">Últimas Noticias</div>
+              <div class="content">
+                <div data-role="carousel" data-controls="false" data-effect="fade" data-bullets-style="circle" data-bullets-size="small" data-auto-start="true" data-bullets-position="right" >
+                  <div class="slide" data-cover="https://images.habbo.com/web_images/habbo-web-articles/lpromo_referral.png">
+                    <div class="promo">
+                      <div class="title">aXDR is getting a bit angular!</div>
+                      <div class="summary">aXDR project, started by Boris Akopov (Xdr) and took by Hornet Team is remaking the system on a different language but same features are held...</div>
+                      <div class="actions">
+                        <button class="button success rounded drop-shadow">Play!</button>
+                      </div>
                     </div>
                   </div>
-              </div>
-             <div class="slide" data-cover="https://images.habbo.com/web_images/habbo-web-articles/lpromo_2016doublecredits.png">
-                <div class="promo">
-                  <div class="title">Xukys, HabboDM all under Hornet Devs!</div>
-                  <div class="summary">Multiple hotels are joining together to become a greater community...</div>
-                  <div class="actions">
-                    <button class="button success rounded drop-shadow">Read More...</button>
+                  <div class="slide" data-cover="https://images.habbo.com/web_images/habbo-web-articles/lpromo_2016doublecredits.png">
+                    <div class="promo">
+                      <div class="title">Xukys, HabboDM all under Hornet Devs!</div>
+                      <div class="summary">Multiple hotels are joining together to become a greater community...</div>
+                      <div class="actions">
+                        <button class="button success rounded drop-shadow">Read More...</button>
+                      </div>
+                    </div>
                   </div>
                 </div>
-             </div>
-         </div>
-
+              </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="box">
+            <div class="title fg-white">Publicidad</div>
           </div>
         </div>
       </div>
     </div>
-    <div class="row">
-        <div class="col">
-          <div class="box fg-white">
-            <div class="title">Nuestro Twitter</div>
-            <div class="content">
-              <a class="twitter-timeline" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw" data-theme="dark" data-height="100" data-chrome="noheader nofooter transparent" data-tweet-limit="3"></a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-            <div class="box fg-white bg-dark">
-              <div class="title">Discord</div>
-              <div class="content">Box Content</div>
-            </div>
-          </div>
-      </div>
   </div>
+</div>
