--- a/src/app/components/user/habbo/settings/customization/customization.component.html
+++ b/src/app/components/user/habbo/settings/customization/customization.component.html
@@ -1,3 +1,48 @@
-<p>
-  customization works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="box fg-white">
+        <div class="title">Personaliza Tu Web</div>
+        <div class="content">
+          <div class="row">
+            <div class="col">
+              <form action="">
+                <h6><b>HabboWEB</b></h6>
+                  <div class="row mb-2">
+                    <div class="cell-sm-4 fg-light">Elige tu propio estilo de fondo</div>
+                    <div class="cell-sm-4">
+                      <select class="arctic fg-white" data-role="select" data-filter="false">
+                        <option value="1" data-template="<span class='mif-snowy icon'></span> $1">Normal</option>
+                        <option value="2" data-template="<span class='mif-moon icon'></span> $1">Noche</option>
+                        <option value="3" data-template="<span class='mif-sunrise icon'></span> $1">Tarde</option>
+                        <option value="4" data-template="<span class='mif-sun icon'></span> $1">Día</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="row mb-2">
+                      <div class="cell-sm-4 fg-light">Elige tu propio estilo de encabezado</div>
+                      <div class="cell-sm-4">
+                        <select class="arctic fg-white" data-role="select" data-filter="false">
+                          <option value="1" data-template="<span class='mif-air icon fg-gray'></span> $1">Gris</option>
+                          <option value="2" data-template="<span class='mif-air icon fg-grayMouse'></span> $1">Oscuro</option>
+                          <option value="3" data-template="<span class='mif-air icon fg-blue'></span> $1">Azul</option>
+                          <option value="4" data-template="<span class='mif-air icon fg-orange'></span> $1">Naranja</option>
+                        </select>
+                      </div>
+                  </div>
+              </form>
+            </div>
+            <div class="col">
+              <div class="box darkTransparent fg-light">
+                <div class="title">¿NECESITAS AYUDA?</div>
+                <div class="content">
+                  Consulta cómo puedes echarte un cable o pedir ayuda en nuestro apartado de <b>Atención al Usuario</b>. También incluye una lista de números de teléfono y páginas web en caso de que necesites hablar con alguien. Si no encuentras una respuesta adecuada en esta página, ponte en contacto con el <b>Ayudante de Habbo</b>.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
