--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,7 +1,7 @@
 <div class="content">
     <app-header [menuTabs]="menuTabs" [subMenuTabs]="currentSubMenus"></app-header>
 
-    <div class="wrapper">
+    <div class="wrapper nite">
         <app-side @slideInOut *ngIf="appSide.indexOf(currentPage.path) > -1" [currentPage]="currentPage"></app-side>
         <div class="page-content">
             <div class="row">
