--- a/src/styles.css
+++ b/src/styles.css
@@ -1,49 +1,60 @@
 /* You can add global styles to this file, and also import other style files */
-	html {
+  html {
 	height: 100%;
-	}
+  }
 	
   html, body {
 	font-family: Ubuntu Light;
 	height: 100% !important;
 	margin: 0;
-	}
+  }
 
-	.arcticSwitch .check::after {
-		background: #ffffff!important;
-		border-color: transparent!important;
-	}
-	.arcticSwitch input[type="checkbox"]:checked ~ .check {
-			background: #106b3a!important;
-	}
-	.arcticSwitch input[type="checkbox"]:checked ~ .check::after {
-			border-color: #ffffff!important;
-			background: #ffffff!important;
-	}
+  .arcticSwitch .check::after {
+	background: #ffffff!important;
+	border-color: transparent!important;	
+  }
 
-	.arctic {
-		background: rgba(0, 0, 0, 0.3);
-    border: none;
-    border-radius: 3px;
-	}
+  .arcticSwitch input[type="checkbox"]:checked ~ .check {
+	background: #106b3a!important;
+  }
+  
+  .arcticSwitch input[type="checkbox"]:checked ~ .check::after {
+	border-color: #ffffff!important;
+	background: #ffffff!important;
+  }
 
-	.arctic.dropdown-toggle::before {
-		border-color: #ffffff;
-	}
+  
+  .arctic {
+   border: none;
+   border-radius: 3px;
+  }
 
-	.arctic.focused {
-		box-shadow: none;
-	}
+  .arctic > input[type=text], input[type=password], input[type=tel], input[type=datetime-local], input[type=email], input[type=file], input[type=month], input[type=number], input[type=search], input[type=time], input[type=url], input[type=week], input[type=file], select, textarea, .file, .input, .textarea, .select, .tag-input, .spinner {
+	background: rgba(0, 0, 0, 0.3);
+	color: #67696f;
+  }
 
-	.arctic .drop-container {
-		background: transparent;
-		border: none;
-	}
+  .arctic > input[type=text].required, input[type=password].required, input[type=tel].required, input[type=datetime-local].required, input[type=email].required, input[type=file].required, input[type=month].required, input[type=number].required, input[type=search].required, input[type=time].required, input[type=url].required, input[type=week].required, input[type=file].required, select.required, textarea.required, .file.required, .input.required, .textarea.required, .select.required, .tag-input.required, .spinner.required {
+	border: none !important;
+  }
 
-	.arctic .d-menu {
-		background: rgba(0,0,0,0.5);
-		color: #ffffff;
-	}
+  .arctic.dropdown-toggle::before {
+	border-color: #ffffff;
+  }
+
+  .arctic.focused {
+	box-shadow: none;
+  }
+
+  .arctic .drop-container {
+	background: transparent;
+	border: none;
+  }
+
+  .arctic .d-menu {
+	background: rgba(0,0,0,0.5);
+	color: #ffffff;
+  }
 
 	.carousel {
 		background-color: transparent;
@@ -80,7 +91,14 @@
   p, ul {
 	margin: 0;
 	padding: 0;
-  }
+	}
+	.guest-container {
+		width: 100%;
+	height: 100%;
+	background: #070d19;
+	background-image: url(./assets/images/bg_texture.out.png);
+	background: radial-gradient(circle at center, #00528c, #070d19);
+	}
   .container {
 	width: 100%;
 	margin-right: auto;
@@ -272,15 +290,15 @@
   }
   .offset-11 {
 	margin-left: 91.66667%;
-	}
-	.box {
-    border-radius: 3px;
-		padding: 10px;
-		margin: 0 0 10px;
-	}
-	.box.darkTransparent {
-		background: rgba(16, 16, 16, 0.55);
-	}
+  }
+  .box {
+	border-radius: 3px;
+	padding: 10px;
+	margin: 0 0 10px;
+  }
+  .box.darkTransparent {
+	background: rgba(16, 16, 16, 0.55);
+  }
   .box > .title {
 	font-size: 14pt;
 	font-weight: bold;
@@ -292,25 +310,25 @@
 	font-size: 10pt;
 	padding: 10px;
 	}
-	
-	.promo {
-		background-color: rgba(0, 0, 0, 0.5);
-		color: #ffffff;
-		height: 100%;
-		padding: 15px;
-	}
 
-	.promo > .title {
-		font-size: 18pt;
-    font-weight: bold;
-	}
+  .promo {
+	background-color: rgba(0, 0, 0, 0.5);
+	color: #ffffff;
+	height: 100%;
+	padding: 15px;
+  }
 
-	.promo > .summary {
-		font-size: 10pt;
-    padding: 10px;
-    width: 55%;
-	}
+  .promo > .title {
+	font-size: 18pt;
+	font-weight: bold;
+  }
 
-	.promo > .actions {
-		
-	}
+  .promo > .summary {
+	font-size: 10pt;
+	padding: 10px;
+	width: 55%;
+  }
+
+  .promo > .actions {
+
+  }
