--- a/src/app/HTMLs/community.html
+++ b/src/app/HTMLs/community.html
@@ -1,3 +1,31 @@
-<p>
-  community works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+        <div @fadeIn data-role="carousel" data-controls="false" data-effect="fade" data-bullets-style="circle" data-bullets-size="small" data-auto-start="true" data-bullets-position="right" >
+          <div class="slide" data-cover="../../assets/images/article_webPromohorse.png">
+            <div class="promo">
+              <div class="title">aXDR is getting a bit angular!</div>
+              <div class="summary">aXDR project, started by Boris Akopov (Xdr) and took by Hornet Team is remaking the system on a different language but same features are held...</div>
+              <div class="actions">
+                <button class="button success rounded drop-shadow">Play!</button>
+              </div>
+            </div>
+          </div>
+          <div class="slide" data-cover="../../assets/images/attic15_furni_promo.png">
+            <div class="promo">
+              <div class="title">Xukys, HabboDM all under Hornet Devs!</div>
+              <div class="summary">Multiple hotels are joining together to become a greater community...</div>
+              <div class="actions">
+                <button class="button success rounded drop-shadow">Read More...</button>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+    <div class="col-3">
+      <div class="box">
+        <div class="title fg-white">Publicidad</div>
+      </div>
+    </div>
+  </div>
+</div>
