--- a/src/app/HTMLs/me.html
+++ b/src/app/HTMLs/me.html
@@ -7,7 +7,7 @@
               <div class="title fg-white">Últimas Noticias</div>
               <div class="content">
                 <div data-role="carousel" data-controls="false" data-effect="fade" data-bullets-style="circle" data-bullets-size="small" data-auto-start="true" data-bullets-position="right" >
-                  <div class="slide" data-cover="https://images.habbo.com/web_images/habbo-web-articles/lpromo_referral.png">
+                  <div class="slide" data-cover="../../assets/images/article_webPromohorse.png">
                     <div class="promo">
                       <div class="title">aXDR is getting a bit angular!</div>
                       <div class="summary">aXDR project, started by Boris Akopov (Xdr) and took by Hornet Team is remaking the system on a different language but same features are held...</div>
@@ -16,7 +16,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="slide" data-cover="https://images.habbo.com/web_images/habbo-web-articles/lpromo_2016doublecredits.png">
+                  <div class="slide" data-cover="../../assets/images/attic15_furni_promo.png">
                     <div class="promo">
                       <div class="title">Xukys, HabboDM all under Hornet Devs!</div>
                       <div class="summary">Multiple hotels are joining together to become a greater community...</div>
