--- a/src/app/components/user/header/header.component.css
+++ b/src/app/components/user/header/header.component.css
@@ -12,9 +12,9 @@ header div.mainNavigator {
   header div.mainNavigator div.logo {
     border-right: 1px solid #9e9e9e;
     box-shadow: 1px 0 0 #6f6f6f;
-    width: 120px;
+    width: 160px;
     height: 100%;
-    background: url(../../../../assets/images/habbologo_blackR.gif) center center no-repeat;
+    background: url(../../../../assets/images/xukyslogo_blackR.gif) center center no-repeat;
     float: left;
     position: relative;
     padding: 0 5px;
@@ -85,4 +85,5 @@ header div.mainNavigator {
     color: #fff;
     font-weight: bold;
     font-size: 10pt;
+    text-transform: uppercase;
   }  
