--- a/src/app/HTMLs/footer.html
+++ b/src/app/HTMLs/footer.html
@@ -1,3 +1,5 @@
-<p>
-  footer works!
-</p>
+<div class="row m-10">
+  <div class="col">
+    <p class="text-left fg-grayBlue text-small">© 2010 - 2019 XUKYS Hotel NO es una marca registrada de Sulake Oy en la Unión Europea, Estados Unidos, Japón, República Popular China y otras jurisdicciones. Todos los derechos reservados a sus respectivos creadores.</p>
+  </div>
+</div>
