--- a/src/app/components/guest/login/login.component.css
+++ b/src/app/components/guest/login/login.component.css
@@ -9,7 +9,7 @@
 }
 
 .logo {
-    background: url('../../../../assets/images/xukyslogo_blackR.gif') -8px -33px;
+    background: url('../../../../assets/images/xukys-sm-logo.png') -8px -33px;
     height: 60px;
     width: 140px;
 }
