--- a/src/app/components/other/pre-loader/pre-loader.component.html
+++ b/src/app/components/other/pre-loader/pre-loader.component.html
@@ -3,8 +3,8 @@
     <div class="row">
       <div class="col">
         <div class="box">
-          <div class="content text-center">
-              <span class="fg-white mif-spinner3 mif-5x ani-spin" *ngIf="show"></span>
+          <div class="content">
+              <div class="mx-auto mt-10" data-role="activity" data-type="cycle" data-style="color"></div>
           </div>
         </div>
       </div>
