--- a/src/app/components/user/header/header.component.css
+++ b/src/app/components/user/header/header.component.css
@@ -14,7 +14,7 @@ header div.mainNavigator {
     box-shadow: 1px 0 0 #6f6f6f;
     width: 160px;
     height: 100%;
-    background: url(../../../../assets/images/xukyslogo_blackR.gif) center center no-repeat;
+    background: url(../../../../assets/images/xukys-sm-logo.png) center center no-repeat;
     float: left;
     position: relative;
     padding: 0 5px;
