--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -12,6 +12,7 @@
                 </div>
             </div>
             <router-outlet></router-outlet>
+            <app-footer></app-footer>
         </div>
     </div>
 </div>
