--- a/src/app/HTMLs/how-to-play.html
+++ b/src/app/HTMLs/how-to-play.html
@@ -23,7 +23,7 @@
                 <p>¡Ve a la tienda de Duckets y mira qué puedes conseguir gratis por tus Duckets!</p>
                 <hr>
                 <h3>Échale un ojo a las actividades</h3>
-                <p>¡En la <a href="/">Home</a> encontrarás las últimas noticias, competiciones y eventos generales de Xukys!</p>
+                <p>¡En la <a routerLink="/">Home</a> encontrarás las últimas noticias, competiciones y eventos generales de Xukys!</p>
                 <p>¡Una vez que hayas hecho un poco de todo esto estarás en camino de ser un auténtico Xukys ciudadano!</p>
             </div>
         </div>
