--- a/src/app/HTMLs/login.html
+++ b/src/app/HTMLs/login.html
@@ -47,6 +47,7 @@
                 Bienvenid@ a Habbo, <br />
                 <h5>Un lugar extraño con gente genial.</h5>
                 <button routerLink="/quickregister" class="button habbo text-bold">Únete Ahora</button>
+                <button (click)="prueba()" class="button habbo text-bold">Prueba</button>
             </div>
           </div>
         </div>
