--- a/src/app/HTMLs/me.html
+++ b/src/app/HTMLs/me.html
@@ -12,7 +12,7 @@
                       <div class="title">aXDR is getting a bit angular!</div>
                       <div class="summary">aXDR project, started by Boris Akopov (Xdr) and took by Hornet Team is remaking the system on a different language but same features are held...</div>
                       <div class="actions">
-                        <button class="button success rounded drop-shadow">Play!</button>
+                        <button class="button habbo drop-shadow">Play!</button>
                       </div>
                     </div>
                   </div>
@@ -21,7 +21,7 @@
                       <div class="title">Xukys, HabboDM all under Hornet Devs!</div>
                       <div class="summary">Multiple hotels are joining together to become a greater community...</div>
                       <div class="actions">
-                        <button class="button success rounded drop-shadow">Read More...</button>
+                        <button class="button habbo drop-shadow">Read More...</button>
                       </div>
                     </div>
                   </div>
