--- a/src/app/HTMLs/side.html
+++ b/src/app/HTMLs/side.html
@@ -1,6 +1,6 @@
 <div @fadeIn *ngIf="currentPage.path == 'me'" class="section">
     <div class="title">
-        Mr.Mustache
+        Usuario
         <span id="status" class="online"></span>
     </div>
     <div class="content">
